<resources>
    <string name="app_name">Mobile_dev_adv_exam_august</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--Toast messages-->
    <string name="invalid">Your word is not valid!</string>
    <string name="player1_win">Player 1 wins!</string>
    <string name="player2_win">Player 2 wins!</string>
    <string name="draw">Draw!</string>
    <string name="no_winner">No points!</string>

    <!--Buttons from layout files-->
    <string name="lowNum">Low</string>
    <string name="highNum">High</string>
    <string name="vowel">Vowel</string>
    <string name="consonant">Consonant</string>
    <string name="check">Check</string>
    <string name="next">Next Round</string>
    <string name="points_overview">The points after this round: </string>
    <string name="ready">Ready</string>
    <string name="player1">Name player 1</string>
    <string name="player2">Name player 2</string>
    <string name="amount_games">Amount of rounds to be played:</string>
    <string name="possible_solutions">Show possible solutions</string>
    <string name="next_round">Next Round</string>
    <string name="play_again">Play Again</string>
</resources>