<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startScreen">

    <TextView
        android:id="@+id/textviewNamePlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1"
        app:layout_constraintBottom_toTopOf="@+id/edittextNamePlayer1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginStart="50dp"/>

    <TextView
        android:id="@+id/textviewNamePlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        app:layout_constraintBottom_toTopOf="@+id/edittextNamePlayer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginEnd="50dp"/>

    <EditText
        android:id="@+id/edittextNamePlayer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/numberPickerRound"
        app:layout_constraintEnd_toStartOf="@+id/edittextNamePlayer2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edittextNamePlayer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/numberPickerRound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"
        tools:ignore="LabelFor" />



    <TextView
        android:id="@+id/textviewAmountGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_games"
        app:layout_constraintBottom_toTopOf="@+id/numberPickerRound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextNamePlayer1"
        app:layout_constraintVertical_bias="0.75" />

    <NumberPicker
        android:id="@+id/numberPickerRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberPickerRound" />

</androidx.constraintlayout.widget.ConstraintLayout>