<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".numberFrag">

    <TextView
        android:id="@+id/textviewScorePlayer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:gravity="start"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"
        />

    <TextView
        android:id="@+id/textviewScorePlayer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:textSize="15sp"
        android:gravity="end"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/textviewPlayer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewScorePlayer1"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/textviewPlayer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewScorePlayer2"
        app:layout_constraintWidth_percent="0.5" />


    <EditText
        android:id="@+id/edittextPlayer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewPlayer1"
        app:layout_constraintWidth_percent="0.5"
        android:autofillHints=" "
        tools:ignore="LabelFor" />


    <EditText
        android:id="@+id/edittextPlayer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewPlayer2"
        app:layout_constraintWidth_percent="0.5"
        android:autofillHints=" "
        android:inputType="number"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/buttonCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextPlayer1" />

    <TextView
        android:id="@+id/textviewResults"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/gridlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewRandom" />

    <TextView
        android:id="@+id/textviewRandom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonCheck"
        tools:layout_editor_absoluteX="-9dp" />

    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignBounds"
        android:columnCount="3"
        android:padding="20dp"
        android:rowCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toTopOf="@+id/buttonLowNumber"
        tools:layout_editor_absoluteX="1dp" />


    <Button
        android:id="@+id/buttonHighNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highNum"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonLowNumber" />

    <Button
        android:id="@+id/buttonLowNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowNum"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonHighNumber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>